--- a/src/resources/css/themes/Ice/Dialogs.css
+++ b/src/resources/css/themes/Ice/Dialogs.css
@@ -37,7 +37,7 @@ UserNameDialog #label
     color: black;
 }
 
-PreferencesDialog #tabAudio, #tabMidi, #tabVST, #tabRecording, #tabMetronome
+PreferencesDialog #tabAudio, #tabMidi, #tabVST, #tabRecording, #tabMetronome, #tabLooper
 {
     border: none;
     background-color:  qlineargradient(x1:0 y1:0, x2:0 y2:1,
