[WIP] Save and load loops (#740)
* Moving looper folder outside audio folder

* Using short names in looper classes

* Saving looper samples in wav or ogg files

* Saving loop metadata in json file

* Disabling save and load buttons when necessary

* Disabling reset button when necessary

* Loading saved loops

* Updating max-layers spin box value when loading a loop

* Using a combobox to change max layers

* Limiting the minimum layers to the ones that are actually being used

* Adding some asserts

* Saving and loading locked layers flag

* Fixing includes in linux

* Implementing 'browse' menu entry

* Hard clipping peaks when saving wave files

* Resampling when loading loops

* Adding a Looper Tab in preferences

* Allowing custom loops folder

* Fixing wave drawing when using big audio buffer sizes

* Loading 32 bit wave files

--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -107,6 +107,34 @@
        </spacer>
       </item>
       <item>
+       <widget class="QPushButton" name="loadButton">
+        <property name="toolTip">
+         <string>Load looper layers</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources/jamtaba.qrc">
+          <normaloff>:/images/load.png</normaloff>:/images/load.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="saveButton">
+        <property name="toolTip">
+         <string>Save looper layers</string>
+        </property>
+        <property name="text">
+         <string notr="true"/>
+        </property>
+        <property name="icon">
+         <iconset resource="../../resources/jamtaba.qrc">
+          <normaloff>:/images/save.png</normaloff>:/images/save.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="resetButton">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -270,11 +298,7 @@
          </widget>
         </item>
         <item>
-         <widget class="QSpinBox" name="maxLayersSpinBox">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-         </widget>
+         <widget class="QComboBox" name="maxLayersComboBox"/>
         </item>
        </layout>
       </item>
@@ -284,6 +308,7 @@
   </layout>
  </widget>
  <resources>
+  <include location="../../resources/jamtaba.qrc"/>
   <include location="../../resources/jamtaba.qrc"/>
  </resources>
  <connections/>
