Implementing mute statuses

--- a/src/resources/css/common/Dialogs.css
+++ b/src/resources/css/common/Dialogs.css
@@ -30,6 +30,14 @@ LooperWindow QGroupBox::title
     left: 6px;
 }
 
+LooperWindow #muteButton[waiting="true"]
+{
+    background-color: yellow;
+    border-color: red;
+    border-style: solid;
+}
+
+
 PreferencesDialog #buttonAddVstScanFolder
 {
     background-image: url(:/images/more.png);
