--- a/src/resources/css/common/Dialogs.css
+++ b/src/resources/css/common/Dialogs.css
@@ -30,13 +30,13 @@ LooperWindow QGroupBox::title
     left: 6px;
 }
 
-LooperWindow #muteButton[waiting="true"]
+LooperWindow #muteButton[blinking="true"]
 {
-    background-color: yellow;
-    border-color: red;
+    background-color: red;
+    border-color: rgb(180, 0, 0);
     border-style: solid;
+    color: white;
 }
-
 
 PreferencesDialog #buttonAddVstScanFolder
 {
