[Looper] Looper layers mute button (#752) (close #745)
* Adding the mute button

* Improving margins

* Always using horizontal layout in layer controls

* Implementing mute statuses

* Blinking mute button while waiting for next interval

* Allowing mute only in 'All Layers' mode

* Hiding mute button when looper mode is not 'All Layers'

* disabling mute button for unlocked layers when 'play locked' is checked

* Reset layers mute state when mode is changed

--- a/src/resources/css/common/Dialogs.css
+++ b/src/resources/css/common/Dialogs.css
@@ -30,6 +30,14 @@ LooperWindow QGroupBox::title
     left: 6px;
 }
 
+LooperWindow #muteButton[blinking="true"]
+{
+    background-color: red;
+    border-color: rgb(180, 0, 0);
+    border-style: solid;
+    color: white;
+}
+
 PreferencesDialog #buttonAddVstScanFolder
 {
     background-image: url(:/images/more.png);
