gain, mute, solo checked non-xmit color match

--- a/src/resources/css/themes/Black_nm/BaseTrack.css
+++ b/src/resources/css/themes/Black_nm/BaseTrack.css
@@ -93,6 +93,12 @@ BaseTrackView[unlighted="true"] QPushButton#buttonStereoInversion
     border: none;
 }
 
+BaseTrackView[unlighted="true"] #soloButton:checked,
+BaseTrackView[unlighted="true"] #buttonBoost:checked
+{
+    color: rgb(180, 180, 180);
+}
+
 /*#buttonBoostZero:buttonStereoInversion
 {
     border-bottom: none;
