--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -325,12 +325,9 @@ LooperWindow #buttonPlay:checked
     background-color: rgb(0, 195, 0);
 }
 
-LooperWindow #buttonRec:checked
+
+LooperWindow #buttonRec[blinking="false"]:checked
 {
     background-color: rgb(255, 0, 0);
 }
 
-LooperWindow #buttonRec[waiting=true]:checked
-{
-    background-color: rgb(255, 255, 0);
-}
