Using blinkable button in rec and play looper buttons (#768) (close #761)
* Synchonizing all blinkable buttons animations

* Allowing program looper to stop in next interval

* Blinking rec button while waiting to record

--- a/src/resources/css/common/Dialogs.css
+++ b/src/resources/css/common/Dialogs.css
@@ -40,6 +40,20 @@ LooperWindow #muteButton[blinking="true"]
     color: white;
 }
 
+LooperWindow #buttonPlay[blinking="true"]
+{
+    background-color: rgb(0, 195, 0);
+    border-color: black;
+    border-style: solid;
+}
+
+LooperWindow #buttonRec[blinking="true"]
+{
+    background-color: yellow;
+    border-color: black;
+    border-style: solid;
+}
+
 PreferencesDialog #buttonAddVstScanFolder
 {
     background-image: url(:/images/more.png);
