[AU] Fixing the problem when changing buffer size in Logic (fix #770)
- Fixing compilation in Mac

- Fixing looper window combo boxes in Mac

- Fixing crash when changing host buffer size. Logic 9 is deleting and
recreating all AUs when buffer size is changed.

--- a/src/Common/gui/LooperWindow.ui
+++ b/src/Common/gui/LooperWindow.ui
@@ -325,7 +325,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="comboBoxPlayMode"/>
+         <widget class="QComboBox" name="comboBoxPlayMode">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
@@ -425,7 +432,14 @@
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="maxLayersComboBox"/>
+         <widget class="QComboBox" name="maxLayersComboBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+         </widget>
         </item>
        </layout>
       </item>
