--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -168,6 +168,11 @@ IntervalProgressWindow                      /* The floating window showing the m
     background-color: rgb(206, 206, 206);
 }
 
+LooperWindow #buttonRec[blinking="true"]
+{
+    background-color: rgb(250, 250, 250);
+}
+
 LooperWindow QLabel,
 LooperWindow QGroupBox
 {
