--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -277,7 +277,8 @@ LooperWindow QComboBox::down-arrow:disabled
     image:url(:/images/arrow-down-lighter.png);
 }
 
-LooperWindow #buttonRec[blinking="true"]
+LooperWindow #buttonRec[blinking="true"],
+LooperWindow #buttonRec[blinking="true"]:checked
 {
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 #FDE5A9,
