--- a/src/resources/css/themes/Flat/NinjamWindow.css
+++ b/src/resources/css/themes/Flat/NinjamWindow.css
@@ -168,6 +168,22 @@ IntervalProgressWindow                      /* The floating window showing the m
     background-color: rgb(206, 206, 206);
 }
 
+LooperWindow #buttonPlay:hover:checked
+{
+    background-color: rgb(0, 215, 0);
+}
+
+LooperWindow #buttonRec:hover:checked
+{
+    background-color: rgb(255, 40, 40);
+}
+
+
+LooperWindow #buttonRec[blinking="true"]:checked
+{
+    background-color: rgb(250, 250, 250);
+}
+
 LooperWindow QLabel,
 LooperWindow QGroupBox
 {
