--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -227,6 +227,23 @@ IntervalProgressDisplay
     qproperty-linesColor: rgba(0, 0, 0, 50);
 }
 
+LooperWindow #buttonPlay:hover:checked
+{
+    background-color: rgb(0, 215, 0);
+}
+
+LooperWindow #buttonRec:hover:checked
+{
+    background-color: rgb(255, 40, 40);
+}
+
+LooperWindow #buttonRec[blinking="true"]:checked
+{
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
+        stop: 0.0 #FDE5A9,
+        stop: 1.0 #FFB301);
+}
+
 LooperWindow QComboBox                         /* the colors inside the combo box*/
 {
     border-color: rgb(227, 183, 153);
