interval progress display color match

--- a/src/resources/css/themes/Black_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Black_nm/NinjamWindow.css
@@ -275,7 +275,7 @@ IntervalProgressDisplay
     /* qproperty-accentsColor: rgb(225, 225, 225); */
     /* qproperty-currentAccentColor: rgb(0, 195, 0); */
     /* qproperty-secondaryBeatsColor: gray; */
-    /* qproperty-disabledBeatsColor: rgba(0, 0, 0, 15); */
+    qproperty-disabledBeatsColor: rgba(0, 0, 0, 30);
     qproperty-linesColor: rgb(0, 0, 0, 180);
     /* qproperty-bordersColor: darkgray; */
 }
