looper mutes disabled color match

--- a/src/resources/css/common/NinjamWindow.css
+++ b/src/resources/css/common/NinjamWindow.css
@@ -331,3 +331,9 @@ LooperWindow #buttonRec:checked
     background-color: rgb(255, 0, 0);
 }
 
+LooperWindow #muteButton:disabled
+{
+    background: none;
+    color: rgba(0, 0, 0, 30);
+    border-color: rgba(0, 0, 0, 40);
+}
