looper combobox shape ice theme

--- a/src/resources/css/themes/Ice/NinjamWindow.css
+++ b/src/resources/css/themes/Ice/NinjamWindow.css
@@ -309,8 +309,11 @@ LooperWindow #buttonRec[blinking="true"]:checked
     background-color: rgb(180, 207, 250);
 }
 
-LooperWindow QComboBox                         /* the colors inside the combo box*/
+#widgetBottom QComboBox                         /* the colors inside the combo box*/
 {
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 90);
+    padding: 0px 0px 0px 0px;
     background-color: rgb(180, 207, 250);
     selection-background-color: rgb(51, 153, 255);
     selection-color: white;
