fixing volcano looper combobox border

--- a/src/resources/css/themes/Volcano_nm/NinjamWindow.css
+++ b/src/resources/css/themes/Volcano_nm/NinjamWindow.css
@@ -244,14 +244,21 @@ LooperWindow #buttonRec[blinking="true"]:checked
         stop: 1.0 #FFB301);
 }
 
-LooperWindow QComboBox                         /* the colors inside the combo box*/
+#widgetBottom QComboBox                         /* the colors inside the combo box*/
 {
-    border-color: rgb(227, 183, 153);
+    border: 1px solid rgba(0, 0, 0, 128);
+    padding: 0px 0px 0px 0px;
     background-color: qlineargradient(x1:0, y1:0, x2:0, y2:1,
         stop: 0.0 #FDE5A9,
         stop: 1.0 #FFB301);
     selection-background-color: rgb(179, 89, 37);
     selection-color: rgb(254, 181, 102);
+}
+
+#widgetBottom QComboBox:focus
+{
+    background-color: rgb(179, 89, 37);
+    color: rgb(254, 181, 102);
 }
 
 LooperWindow QComboBox QAbstractItemView      /* the colors inside drop down menu of the combo box*/
